--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "^14.2.4",
+    "next-videos": "1.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
